# steval-mki109v3

./: .gitignore  CMakeLists.txt  README.md  STM32F401VETx_FLASH.ld  _prj_MKI109V3.ioc  unico.txt
Drivers/ASM330LHHXG1/Inc/: asm330lhhxg1_conf.h
Drivers/ASM330LHHXG1/Src/: asm330lhhxg1_driver.c  asm330lhhxg1_reg.c
Inc/: main.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Src/: gpio.c  i2c.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c  usbd_desc.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
